err/sitetool.err
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BareNecessities-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/CommandTool-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/Gallery-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/SiteTool-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/bn'...
Compiling './lib/python3.5/site-packages/bn/__init__.py'...
***   File "./lib/python3.5/site-packages/bn/__init__.py", line 170
    except error, err:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/commandtool'...
Compiling './lib/python3.5/site-packages/commandtool/__init__.py'...
***   File "./lib/python3.5/site-packages/commandtool/__init__.py", line 547
    print res
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/commandtool/recipes_267662.py'...
***   File "./lib/python3.5/site-packages/commandtool/recipes_267662.py", line 88
    print 'Without wrapping function\n'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/gallery'...
Compiling './lib/python3.5/site-packages/gallery/__init__.py'...
***   File "./lib/python3.5/site-packages/gallery/__init__.py", line 967
    except getopt.GetoptError, err:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gallery/plugin.py'...
***   File "./lib/python3.5/site-packages/gallery/plugin.py", line 495
    print filename, meta_path
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sitetool'...
Compiling './lib/python3.5/site-packages/sitetool/api.py'...
***   File "./lib/python3.5/site-packages/sitetool/api.py", line 325
    except TemplateError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sitetool/command.py'...
***   File "./lib/python3.5/site-packages/sitetool/command.py", line 87
    except TemplateError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sitetool/convert'...
Compiling './lib/python3.5/site-packages/sitetool/convert/blog.py'...
***   File "./lib/python3.5/site-packages/sitetool/convert/blog.py", line 70
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sitetool/convert/suunto.py'...
***   File "./lib/python3.5/site-packages/sitetool/convert/suunto.py", line 218
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sitetool/export'...
Compiling './lib/python3.5/site-packages/sitetool/export/wordpress.py'...
***   File "./lib/python3.5/site-packages/sitetool/export/wordpress.py", line 111
    except MySQLdb.OperationalError, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sitetool/template'...
Compiling './lib/python3.5/site-packages/sitetool/template/dreamweaver.py'...
***   File "./lib/python3.5/site-packages/sitetool/template/dreamweaver.py", line 921
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
